--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "cms",
         "disable",
         "password",
-        "auth"
+        "auth",
+        "login"
     ],
     "license": "MIT",
     "authors": [
